environments/prod/ai/namespace.yaml
{
  "apiVersion": "v1",
  "kind": "Namespace",
  "metadata": {
    "labels": {
      "app.kubernetes.io/part-of": "dai-run",
      "dairun.io/public-route": "true",
      "dairun.io/purpose": "application-runtime",
      "istio.io/dataplane-mode": "ambient",
      "pod-security.kubernetes.io/audit": "restricted",
      "pod-security.kubernetes.io/audit-version": "v1.36",
      "pod-security.kubernetes.io/enforce": "restricted",
      "pod-security.kubernetes.io/enforce-version": "v1.36",
      "pod-security.kubernetes.io/warn": "restricted",
      "pod-security.kubernetes.io/warn-version": "v1.36"
    },
    "name": "dir-ai-ns"
  },
  "spec": {
    "finalizers": [
      "kubernetes"
    ]
  }
}
